support load config

--- a/ref.conf
+++ b/ref.conf
@@ -1,4 +1,6 @@
 {
-    "ProductCode": "",
-    "References": []
+    "ProductCode": "{4A5016E3-C9DD-4595-8A4B-053A7A6335F6}",
+    "References": {
+        "{13B5D516-1B2F-4999-AC76-D0B4071E2551}": "[{ProgramFilesCommonX64}]\\shared.file"
+    }
 }
