update test config

--- a/ref.conf
+++ b/ref.conf
@@ -5,9 +5,9 @@
         {
             "File": "[{ProgramFilesCommonX64}]\\shared.file",
             "Registry": {
-                "HKEY_CLASSES_ROOT\\Key1": [],
-                "HKEY_CLASSES_ROOT\\Key2": [
-                    "Value1", "Value2"
+                "HKEY_LOCAL_MACHINE\\SOFTWARE\\Test": [],
+                "HKEY_LOCAL_MACHINE\\SOFTWARE\\Test1": [
+                    "Test2"
                 ]
             }
         }
