update sample for test

--- a/ref.conf
+++ b/ref.conf
@@ -10,6 +10,10 @@
                     "Test2"
                 ]
             }
+        },
+        "{13B5D516-1B2F-4999-AC76-D0B4071E2552}": 
+        {
+            "File": "[{ProgramFilesCommonX64}]\\shared2.file"
         }
     }
 }
